2022-05-15  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/entrylist.py: removed __add__() and
	__iadd__() from the EntryList class. They new functions did not
	work as expected.

	* Tools/python/aabooks/ajbbook/bookfile.py
	(BookFile.write_file_xml): Added __add__() and extend() to the
	BookFile class.  I can now add '+' two BookFiles or extend one of
	the with a second BookFile.

2022-05-13  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/entrylist.py (EntryList.__add__):
	Created the __add__() and __iadd__() so that I can add or extend
	the EntryList class

2022-04-24  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/search.py (__get_sub_strings__): Add
	test for strings less than min_length.  If so, add them to the
	strset to be included in the search dictionary.  Abbreviations
	like BA or AJ were not being found when searching the journal
	list.

2022-04-23  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalfile.py (JournalFile):
	Complete changes to support zero-based entrylist.

	* Tools/python/aabooks/journal/journalwindow.py
	(JournalWindow.__init__): Complete changes to support zero-based
	entrylist.

2022-04-22  Jim Fowler  <jrf@biblion>

	* Note: When making a modification list this I should run the unit
	tests both before and after. This time I only ran them after and
	there were some small changes that I attribute to earlier changes
	that were not tested.  However, if I had rqun the unit tests before
	modifing, I could have noted what the current state of the test
	were.

	* Tools/python/aabooks/journal/journalfile.py
	(JournalFileTestCase.test_d_check_schema): Modified to support the
	changes to entrylist.py, primarily in writing the output files.

	* Tools/python/aabooks/ajbbook/bookfile.py: Modified to support
	the changes to entrylist.py, primarily in writing the output
	files.

	* Tools/python/aabooks/lib/entrylist.py (EntryList): Changed the
	entrylist to be a list only of entries.  The header is now a